# serqet

./: README.md  docker-compose.yml  go.mod
brain/: main.py  pyproject.toml
brain/agents/: arbiter.py  base.py  finance.py  health.py  jobs.py  loader.py  manager.py  node.py  research.py  revenue.py  serqet_graph.py  specialists.py  state.py  tasks.py
brain/core/: memory.py
brain/providers/: factory.py
brain/schemas/: request.py
brain/tools/: __init__.py  arbiter.py  code.py  finance.py  health.py  jobs.py  manager.py  oracle.py  research.py  revenue.py  security.py  social.py  tasks.py
brain/utils/: check_models.py  parser.py  voice.py
dashboard/: package-lock.json  package.json  pnpm-lock.yaml
dashboard/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  tailwind.config.ts
dashboard/src/components/chat/: ChatInterface.tsx
dashboard/src/components/layout/: Sidebar.tsx
dashboard/src/components/modules/: ActionsModule.tsx  (+8 more)
dashboard/src/hooks/: useSerqet.tsx  useToast.tsx
dashboard/src/lib/: constants.ts
dashboard/src/types/: index.ts
gateway/: go.mod  go.sum  main.go
gateway/api/: actions.go  agents.go  features.go  files.go  finance.go  history.go  intent.go  modules.go  overview.go  sessions.go  webhooks.go
gateway/db/: postgres.go
gateway/models/: actions.go  agent.go  aspects.go  base.go  chat.go  finance.go  health.go  jobs.go  models.go  module.go  research.go  social.go  system.go  tasks.go
gateway/services/: brain.go  executor.go  heartbeat.go  kraken.go  logger.go  scheduler.go  worker.go
gateway/utils/: helpers.go
