[project]
name = "brain"
version = "0.1.0"
description = "Serqet brain"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.11.2",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.129.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "pandas>=3.0.1",
    "uvicorn>=0.41.0",
]
